apps/applications/tools/excalidraw/app/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: excalidraw-route
  namespace: default # Where your application is deployed
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "excalidraw.kerrlab.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: excalidraw-ui
          port: 80
